# ChangeLog for app-editors/gedit-plugins
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gedit-plugins/ChangeLog,v 1.6 2010/03/08 21:28:17 eva Exp $

*gedit-plugins-2.28.0 (08 Mar 2010)

  08 Mar 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -gedit-plugins-2.26.2.ebuild, +gedit-plugins-2.28.0.ebuild:
  Version bump. Do not install unused *.la files, do not let build
  pre-compile python code. i18n updates and a couple of fixes.

*gedit-plugins-2.26.3 (27 Aug 2009)

  27 Aug 2009; Romain Perier <mrpouet@gentoo.org>
  +gedit-plugins-2.26.3.ebuild:
  Version bump to 2.26.3, Misc Bugfixes, translations updated

  17 Aug 2009; Rémi Cardona <remi@gentoo.org> gedit-plugins-2.26.2.ebuild:
  add ~x86 keyword, fixes bug #281750

  24 Jul 2009; Romain Perier <mrpouet@gentoo.org> gedit-plugins-2.26.2.ebuild,
  metadata.xml:
  Fix RDEPEND, some dependencies was missing. Drop ${MY_PV}, Increase eapi to
  2 and fix missing terminal? ( >=x11-libs/vte-0.19.4[python] ) dep, bug 28470.

  23 Jul 2009; Romain Perier <mrpouet@gentoo.org> gedit-plugins-2.26.2.ebuild,
  metadata.xml:
  Move sessionsaver to session global USE flag, and add GCONF_DEBUG=no

*gedit-plugins-2.26.2 (23 Jul 2009)

  23 Jul 2009; Romain Perier <mrpouet@gentoo.org> +gedit-plugins-2.26.2.ebuild,
  +metadata.xml:
  New ebuild, imported from bug #28470, thanks to Rajat Vig , Matt Jorde and
  Martin Klaffenboeck for their works.

