@@ -4,13 +4,13 @@ Hash: SHA1
 DIST gedit-plugins-2.26.3.tar.bz2 557042 RMD160 f6b4e276c8c98a151c1be43739149283848f7297 SHA1 f3c7bcc4a4f9093e00746634a219a3f8a78923bd SHA256 86b3c5c1dcee826a8ac693dc9e4203af3027cee419394f9ac4e2be1dab637036
 DIST gedit-plugins-2.28.0.tar.bz2 541165 RMD160 124ffb9b85cc760b9990be2ea49d8833dfb54c4c SHA1 72394b5b8e289e0b83f07d66316e5f8f77d73fcb SHA256 d615d2f26e66d7a23f37205089096a60faa2cb6e9108f9034cf2e66b940bf2ca
 EBUILD gedit-plugins-2.26.3.ebuild 1388 RMD160 1837c5cfcda44f84a7b72800d20692c7f24fc277 SHA1 5e4bb3f4b81cd39328d4429bc333f1e694c5df48 SHA256 8dfb47dee9f92f384150003e1ce4bbff990fdbd2fb20e43d55bf0fc7ab4f6266
-EBUILD gedit-plugins-2.28.0.ebuild 1895 RMD160 5ae187cf2f2126a3f33e4e83bf0746e08494ddb7 SHA1 b8e376e111d7202b3fe64918d185cada708b1a32 SHA256 de8f3f8efd66f7ec6d1622e9a902ca29eaf858df71d555c1d716d56fe53714ef
-MISC ChangeLog 1474 RMD160 ee0dfa4e75b524d35805959ed212cec9447463cb SHA1 04f6999c3703008d3ffbbc03c9f10565e9fac2d8 SHA256 b5286130c3ca5857234c930f1ae1b24abb8efcaaf1a7f5338f78e45bb844495e
+EBUILD gedit-plugins-2.28.0.ebuild 2037 RMD160 bcf49ac5c87564829084534a93d94af56e1d91f9 SHA1 c47fa4011b62f31376b9d699e0f95d8a4cc014f4 SHA256 ceedc065c89339ada390a715df239373ad785786f9843c34d38c916e8a2d68f8
+MISC ChangeLog 1586 RMD160 4f878cc9e24642a2d911903d51119955e24556d1 SHA1 73d80dc7dbfd07ca508a56ace735551fcbfbb353 SHA256 d10b260a03518bdc3ee6aad1cff62134d3c71cd5dba461ee17d417a202408930
 MISC metadata.xml 1138 RMD160 4f731728ecc862e7feeae02cb31199f9860f1544 SHA1 d66e5bf969d60c4c1aaf8b5d2c6d4b785b151c16 SHA256 35055675c727bcdcefa37c5c9323db6662f8d9fb43b538da91b64f9c79b07103
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuVa/sACgkQ1fmVwcYIWAaIdgCg153HZYEVe4fFZxOe22QjqdBr
-aqgAn3YQTAReGDkhl+xhY9kBgJr8R8m3
-=lqip
+iEYEARECAAYFAkuVi80ACgkQ1fmVwcYIWAa+rwCeKtUxiWOvjdcOBkrqATK+j2wK
+bxkAoM0YDmaLo0jji8fyzqu1zgCzgxAZ
+=jhae
 -----END PGP SIGNATURE-----
